# autotel

./: .cursorrules  .gitattributes  .gitignore  80_20_IMPLEMENTATION_SUMMARY.md  AUTOTEL_PRD.md  AUTOTEL_V5_PROJECT_CHARTER.md  AUTOTEL_XML_SPECIFICATION.md  CLEANUP.md  CLI_README.md  COMPLETE_SYSTEM_ANALYSIS.md  DESIGN-BY-CONTRACT-PLAN.md  DEV-ROADMAP.md  DOCUMENTATION_INDEX.md  DYNAMIC_USER_INTERACTION_SUMMARY.md  GAPS_AND_MISTAKES.md  LICENSE  Makefile  OTEL_PROCESSOR_DOCUMENTATION.md  OWL_DATA_STRUCTURES.md  OWL_SHACL_DSPY_VALIDATION_SUMMARY.md  PICOSPARQL_REVISIONS_REQUIRED.md  PICOSPARQL_STRUCTURE_CREATED.md  PYDANTIC-V2-IMPLEMENTATION-PLAN.md  README.md  README_PIPELINE.md  TELEMETRY-FIRST-CAPABILITIES.md  TEST-MIGRATION-VALIDATION.md  TESTS_RUN_OUTPUT.txt  USER_INTERACTION_SUMMARY.md  WEAVER_TELEMETRY_PLANNING.md  WORKING-BACKWARDS-AUTOTEL-V8-README.md  autotel_demo_ontology.yaml  autotel_prototype.py  bpmn_2_0_ontology.rdf  bpmn_orchestrator.py  compiled_ontology_mock.json  compiled_ontology_simple.json  configurable_spiff_check.py  example_workflow.json  git_implementation_history.md  (+59 more)
autotel/engines/seven_tick/cns/: 7T_IMPLEMENTATION_REPORT.md  7T_PARSER_IMPLEMENTATION.md  80_20_IMPLEMENTATION_COMPLETE.md  80_20_IMPLEMENTATION_SUMMARY.md  8THM_ARCHITECTURE_DIAGRAM.md  8THM_TRINITY_ARCHITECTURE.md  8T_COORDINATOR_SUMMARY.md  8T_FINAL_IMPLEMENTATION_REPORT.md  8T_IMPLEMENTATION_PLAN.md  8T_IMPLEMENTATION_REPORT.md  8thm_iter2  8thm_trinity  8thm_working  AOT_80_20_FINAL_REPORT.md  AOT_TRANSPILER_USAGE.md  ARENAC_IMPLEMENTATION_COMPLETE.md  ARENAC_TELEMETRY_IMPLEMENTATION_COMPLETE.md  ARENA_IMPLEMENTATION_SUMMARY.md  BENCHMARK_TASK_COMPLETION_SUMMARY.md  BENCHMARK_VALIDITY_ANALYSIS.md  BINARY_MATERIALIZER_80_20_SUMMARY.md  BINARY_MATERIALIZER_COMPLETE.md  BINARY_MATERIALIZER_FINAL_REPORT.md  BINARY_MATERIALIZER_IMPLEMENTATION_SUMMARY.md  CJINJA_80_20_IMPLEMENTATION_PLAN.md  CLI_PROGRESS_REPORT.md  CMakeLists.txt  CNS_AOT_IMPLEMENTATION_REPORT.md  CNS_BENCHMARK_ENGINEERING_REPORT.md  CNS_BENCHMARK_SUITE_README.md  CNS_BINARY_MATERIALIZER_PLAN.md  CNS_BUILD_TEST_REPORT.md  CNS_FIFTH_EPOCH.md  CNS_ONTOLOGY_COMPLETION_REPORT.md  CNS_ONTOLOGY_GAPS_ANALYSIS.md  CNS_ONTOLOGY_SCAN_SUMMARY.md  CNS_PERFORMANCE_ANALYSIS_REPORT.md  CNS_SPARQL_AOT_VALIDATION_FINAL_REPORT.md  GATEKEEPER_IMPLEMENTATION_SUMMARY.md  GATEKEEPER_TEST_RESULTS.md  (+241 more)
autotel/engines/seven_tick/cns/aot/: Makefile  aot_calculator.h  aot_constants.h  arena_codegen.c  arena_codegen.h  arena_usage_example  arena_usage_example.c  generated_arena.h  simple_arena.h  test_arena_codegen  test_arena_codegen.c  test_calculator  test_calculator.c
autotel/engines/seven_tick/cns/benchmarks/: bench_arena.c  cns_bench.c  fifth_epoch_benchmarks.h  implementation_comparison.c
autotel/engines/seven_tick/cns/codegen/: aot_compiler.py  aot_compiler_production.py  cjinja_aot_compiler.py  extract_spans.py  owl_aot_compiler.py  weaver_80_20_final.py  weaver_80_20_fixed.py  weaver_80_20_real.py  weaver_80_20_simple.py  weaver_80_20_simple_final.py  weaver_80_20_working.py  weaver_benchmark.py  weaver_benchmark_accurate.py  weaver_benchmark_real.py  weaver_benchmark_simple.py  weaver_header_only.py  weaver_header_only_fixed.py  weaver_optional_otel.py  weaver_simple.py
autotel/engines/seven_tick/cns/docs/: 7T_CNS_IMPLEMENTATION_SUMMARY.md  7T_TO_CNS_MAPPING.md  ARCHITECTURE.md  BEST_IMPLEMENTATION_ANALYSIS.md  CJINJA_AOT_IMPLEMENTATION_PLAN.md  COMPILER-ENTRY.md  DOCUMENTATION_SUMMARY.md  GATEKEEPER.md  IMPLEMENTATION_COMPARISON.md  JINJA-AOT.md  OPTIMIZATION_HELPERS_GUIDE.md  OWL-AOT.md  PORTED_SUBSYSTEMS_SUMMARY.md  README.md  REFACTOR_GUIDE.md  SHACL-AOT.md  SPARQL-AOT.md  SPECIALIZED_HELPERS_GUIDE.md  SQL-AOT.md  benchmark.md  changelog.md  performance_analysis_report.md  unit_testing.md  validate_weaver.py
autotel/engines/seven_tick/cns/examples/: arena_usage.c  arenac_telemetry_example.c  complete_arenac_example.c  helper_usage_example.c  otel_integration.c  ttl_analyzer_usage.c
autotel/engines/seven_tick/cns/include/: bitactor.h  cns.h  cns_benchmark.h  cns_command_types.h  cns_commands.h  cns_dispatch.h  cns_handlers.h  cns_parser.h  nanoregex.h  ontology_ids.h  ontology_rules.h  ttl_compiler.h
autotel/engines/seven_tick/cns/scripts/: refactor_helper.py
autotel/engines/seven_tick/cns/src/: Makefile.materializer  Makefile.standalone  arena.c  arenac_telemetry.c  bitactor.c  cmd_adapt.c  cmd_benchmark.c  cmd_benchmark_fixed.c  cmd_learn.c  cmd_ml.c  cmd_ml_real.c  cmd_pm.c  cmd_reflect.c  cmd_spin.c  cmd_stubs.c  cmd_test.c  cmd_think.c  cmd_trace.c  cns_main.c  cns_optional_otel.h  cns_otel.h  cns_otel_inject.c  cns_parser.c  cns_transpile.c  cycle_checker.c  gatekeeper.c  gatekeeper_test.c  graph.c  interner.c  lexer.c  main.c  materializer.c  owl.c  parser.c  performance_optimizations.c  shacl.c  shacl_benchmark.c  (+14 more)
autotel/engines/seven_tick/port/: 14cycle_success.md  80_20_FIFTH_EPOCH_SUCCESS.md  80_20_IMPLEMENTATION_SUMMARY.md  80_20_automation_gap_analysis.md  8H_REASONING_ARCHITECTURE.md  8THM_TRINITY_MANIFESTO.md  8thm_iteration_2.c  8thm_working_system.c  AOT_80_20_BENCHMARK_DESIGN.md  BITACTOR-CORE.md  BITACTOR-LS.md  BITACTOR.md  BITACTOR_80_20_IMPLEMENTATION.md  BITACTOR_80_20_MOCK_ANALYSIS.md  BITACTOR_80_20_PERFORMANCE_REPORT.md  BITACTOR_80_20_SYNTHESIS.md  BITACTOR_IMPLEMENTATION_GUIDE.md  BITACTOR_LS_ARCHITECTURE_DESIGN.md  BITACTOR_LS_IMPLEMENTATION_REPORT.md  BITACTOR_TTL_INTEGRATION_DEMO.md  CHATMAN_NANO_STACK_REBUILD_GUIDE.md  CJINJA_ANALYSIS_REPORT.md  CMakeLists.txt  CNS_FIFTH_EPOCH_EVOLUTION.md  CNS_FINAL_ITERATION_SUMMARY.md  CNS_TRANSFORMATION_COMPLETE.md  CNS_V8_FULL_AUTOMATION_ARCHITECTURE.md  CNS_V8_FULL_AUTOMATION_SUMMARY.md  CNS_V8_ML_OPTIMIZER_GUIDE.md  CNS_V8_TURTLE_LOOP_INTEGRATION.md  CNS_V8_TURTLE_LOOP_SUMMARY.md  CNS_V8_ZERO_INTERVENTION_TURTLE_ARCHITECTURE.md  CONNECTION_PLAN.md  CONTINUOUS_TURTLE_PIPELINE.md  COPY_COMPLETION_SUMMARY.md  CORRECT_80_20_ANALYSIS.md  DSPY_OWL_SHACL_INTEGRATION.md  FIFTH_EPOCH_80_20_RESULTS.md  FINAL_80_20_SUCCESS_REPORT.md  FIVE_WHYS_VS_80_20_ANALYSIS.md  (+185 more)
(+1551 files in other folders)
